# slop

./: .gitignore  PRIVACY_POLICY.md  README.md  example.env  index.js  main.py  package-lock.json  package.json  prompt.txt  pyproject.toml  rapidapi_transcript.py  run_image_check.py  run_transcript_verify.py  scenes.json  slop_app_config.py  stt_elevenlabs.py  verify_vertical.py
.cursor/rules/: env.mdc
.github/workflows/: daily.yml  deploy.yml  generate-and-upload.yml  generate-from-channel.yml  generate-run-on-push.yml  generate-scenes.yml  reaction-generate-and-upload.yml  render-from-scenes.yml  swaruu.yml
config/: config.example.json
slop/: auto.py  cli.py  config.py  conftest.py  drive_uploader.py  images.py  openai_utils.py  pipeline.py  prompts.py  scriptgen.py  stitch.py  stitch_test.py  topics.py  uploader_config.py  utils.py  voice.py  voice_test.py  youtube_analytics.py  youtube_cli.py  youtube_monitor.py  youtube_uploader.py
