[project]
name = "slop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.1",
    "openai>=1.37.0",
    "elevenlabs>=1.6.1",
    "Pillow>=10.3.0",
    "requests>=2.32.3",
    "tenacity>=8.3.0",
    "google-api-python-client>=2.136.0",
    "yt-dlp>=2024.8.6",
    "google-auth>=2.31.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "youtube-transcript-api==0.6.2",
]

[project.scripts]
slop = "slop.cli:app"
slop-youtube = "slop.youtube_cli:app"

[tool.uv]
package = true
dev-dependencies = []

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
